Added TODOs in README

--- a/README.org
+++ b/README.org
@@ -1,1 +1,9 @@
 #+TITLE: 2108 Render Project
+#+AUTHOR: Conscat
+
+* Week 4
+** TODO Depth sprite
+** TODO Color palette
+** TODO Correct 3D depth sorting
+** TODO Z movement
+** TODO Forward renderer
